# NovaVest---Milestone-Based-Venture-Funding-Platform

./: .gitignore  README.md
.github/workflows/: main.yml
contracts/campaign_manager/: Cargo.toml
contracts/campaign_manager/src/: lib.rs
contracts/governance_token/: Cargo.toml
contracts/governance_token/src/: lib.rs
contracts/vault/: Cargo.toml
contracts/vault/src/: lib.rs
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.test.tsx  App.tsx  index.css
frontend/src/components/: CampaignDetails.tsx  CreatorDashboard.tsx  ExploreCampaigns.tsx  Governance.tsx  Hero.tsx  Navbar.tsx
frontend/src/context/: NovaContext.tsx
frontend/src/hooks/: useFreighter.ts
frontend/src/services/: soroban.ts
