[package]
name = "campaign_manager"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = "22.0.1"
vault = { path = "../vault" }
governance_token = { path = "../governance_token" }

[dev-dependencies]
soroban-sdk = { version = "22.0.1", features = ["testutils"] }
vault = { path = "../vault", features = ["testutils"] }
governance_token = { path = "../governance_token", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
